--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 1
+    <ion-title class="header">
+      header 1
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,6 +12,18 @@
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <div class="todo-container"> 
+    <h2>Header of test app</h2>
+    <p class="txt">
+      simply test application
+    </p>
+    <div padding>
+      <ion-list>
+        <ion-item *ngFor="let item of items">
+          {{item}}
+        </ion-item>
+      </ion-list>
+    </div>
+  </div>
+    
 </ion-content>
