Fixed router structure

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,32 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title class="header">
-      header 1
+      Game
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <div class="todo-container"> 
-    <h2>Header of test app</h2>
-    <p class="txt">
-      simply test application
-    </p>
-    <div padding>
-      <ion-list>
-        <ion-item *ngFor="let item of items">
-          <div>
-            <h3>{{item.header}}</h3>
-            <p>{{item.text}}</p>
-          </div>
-        </ion-item>
-      </ion-list>
-    </div>
-  </div>
     
 </ion-content>
