--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,13 +1,5 @@
 .header {
     text-align: center;
-    background: gray;
-    color: white;
-}
-
-.todo-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    color: #242424;
 }
 
