Added basic layout for game page

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,11 +1,21 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title class="header">
-      Game
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-    
+  <div class="game-container">
+    <div class="game-container__question">
+      9 + 18
+    </div>
+    <div class="game-container__keyboard">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div>del</div>
+      <div>0</div>
+      <div>ok</div>
+    </div>
+  </div>
 </ion-content>
