--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,5 +1,31 @@
-.header {
-    text-align: center;
-    color: #242424;
-}
+.game-container {
+    height: 95vh;
+    background: var(--ion-color-dark);
+    color: var(--ion-color-warning-tint);
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 
+    &__question {
+        background: var(--ion-color-dark);
+        color: var(--ion-color-warning-tint);
+        height: 25vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 3rem;
+    }
+
+    &__keyboard {
+        height: 70vh;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+        div {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+
+}
