Added home routerLink, generateDevidedNums func

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,5 +1,8 @@
 <ion-content [fullscreen]="true">
   <div class="game-container">
+    <div routerLink="/tabs/tab3" class="go-home">
+      <
+    </div>
     <div class="game-container__question">
       {{num1}} {{operator}} {{num2}} = {{answer}}
     </div>
