--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -5,6 +5,14 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    position: relative;
+
+    .go-home {
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        font-size: 30px;
+    }
 
     &__question {
         background: var(--ion-color-dark);
