--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -17,7 +17,7 @@
     &__question {
         background: var(--ion-color-dark);
         color: var(--ion-color-warning-tint);
-        height: 25vh;
+        height: 35vh;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -25,7 +25,7 @@
     }
 
     &__keyboard {
-        height: 70vh;
+        height: 60vh;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
 
@@ -49,6 +49,11 @@
 
         &__ok {
             color: var(--ion-color-success);
+        }
+
+        .disabled {
+            pointer-events: none;
+            opacity: .9;
         }
     }
 
