Fixed routing, refactoring

--- a/src/app/components/game/game.page.html
+++ b/src/app/components/game/game.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="game-container">
-    <div routerLink="/tabs/tab3" class="go-home">
+    <div routerLink="/menu" class="go-home">
       <
     </div>
     <div class="game-container__question">
