--- a/src/app/components/settings/settings.page.scss
+++ b/src/app/components/settings/settings.page.scss
@@ -6,10 +6,11 @@
     &__header {
         font-size: 25px;
         text-align: center;
+        padding: 20px;
     }
 
     &__warning {
-        font-size: 20px;
+        font-size: 16px;
         text-align: center;
     }
 
@@ -28,7 +29,6 @@
         height: 3rem;
         justify-content: center;
         align-items: center;
-        margin: 20px 0;
     }
 
     &__options {
@@ -57,8 +57,8 @@
         background: var(--ion-color-warning-tint);
     }
 
-    .hide {
-        opacity: 0;
+    .not-active {
+        opacity: .5;
         pointer-events: none;
         transition: .5s all ease;
     }
