--- a/src/app/components/menu/menu.page.html
+++ b/src/app/components/menu/menu.page.html
@@ -5,10 +5,12 @@
     </div>
 
       <div class="menu__buttons">
-        <div routerLink="/game" >
+        <div routerLink="/game" 
+             class="menu__button">
           play
         </div>
-        <div routerLink="/settings">
+        <div routerLink="/settings"
+             class="menu__button">
           settings
         </div>
       </div>
