Added roundLength logic

--- a/src/app/components/game/game.page.html
+++ b/src/app/components/game/game.page.html
@@ -3,6 +3,9 @@
     <div routerLink="/menu" class="go-home">
       <
     </div>
+    <div class="round">
+      {{round}} / {{settingsService.roundLength}}
+    </div>
     <div class="game-container__question">
       {{num1}} {{operator}} {{num2}} = {{answer}}
     </div>
