--- a/src/app/components/game/game.page.scss
+++ b/src/app/components/game/game.page.scss
@@ -14,6 +14,13 @@
         font-size: 30px;
     }
 
+    .round {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        font-size: 30px;
+    }
+
     &__question {
         background: var(--ion-color-dark);
         color: var(--ion-color-warning-tint);
