--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,14 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+.not-active {
+    opacity: .5;
+    pointer-events: none;
+    transition: .5s all ease;
+}
+
+.hide {
+    opacity: 0;
+}
