Added secondsOnAnswer in SettingsService, improved logic of timer for answer

--- a/src/app/components/game/game.page.html
+++ b/src/app/components/game/game.page.html
@@ -22,7 +22,11 @@
     <div class="game-container__question">
       {{num1}} {{operator}} {{num2}} = {{answer}}
     </div>
-    <div class="game-container__time-line" [ngStyle]="{'width.%': secondsCount}"></div>
+    <div class="game-container__time-line">
+      <div *ngFor="let rectangle of timeRectangles"
+           [ngClass]="{'hide': rectangle >= secondsCount + 1}">
+      </div>
+    </div>
     <div class="game-container__keyboard">
       <div (click)="pushInAnswer(1)">1</div>
       <div (click)="pushInAnswer(2)">2</div>
