--- a/src/app/components/game/game.page.scss
+++ b/src/app/components/game/game.page.scss
@@ -8,9 +8,20 @@
     position: relative;
 
     &__time-line {
-        height: 1vh;
-        width: 100%;
-        background-color: var(--ion-color-danger);
+        height: 5vh;
+        background-color: var(--ion-color-dark);
+        box-sizing: border-box;
+        border: 1px solid var(--ion-color-warning-tint);
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: stretch;
+
+        div {
+            display: flex;
+            background: var(--ion-color-danger-shade);
+            width: 100%;
+            margin: 5px;
+        }
     }
 
     .go-home {
@@ -51,7 +62,7 @@
     &__question {
         background: var(--ion-color-dark);
         color: var(--ion-color-warning-tint);
-        height: 39vh;
+        height: 35vh;
         display: flex;
         align-items: center;
         justify-content: center;
