--- a/src/app/components/menu/menu.page.scss
+++ b/src/app/components/menu/menu.page.scss
@@ -24,8 +24,9 @@
         border: 1px solid var(--ion-color-warning-tint);
         border-radius: 5px;
         min-width: 5rem;
-        height: 3rem;
+        height: 2rem;
         justify-content: center;
         align-items: center;
+        box-shadow: 0 0 4px white;
     }
 }
