--- a/src/app/components/menu/menu.page.scss
+++ b/src/app/components/menu/menu.page.scss
@@ -16,7 +16,7 @@
         justify-content: space-around;
         align-items: center;
         height: 30vh;
-        font-size: 20px;
+        font-size: 18px;
     }
     
     &__button {
@@ -27,6 +27,6 @@
         height: 2rem;
         justify-content: center;
         align-items: center;
-        box-shadow: 0 0 4px white;
+        box-shadow: 0 0 4px var(--ion-color-secondary-contrast);
     }
 }
