--- a/src/app/components/settings/settings.page.html
+++ b/src/app/components/settings/settings.page.html
@@ -34,18 +34,36 @@
     </div>
 
     <div class="settings__subheader">Round count</div>
-    <div class="settings__round-container">
+    <div class="settings__set-container">
       <ion-button
-        class="settings__round-btn" 
+        class="settings__set-btn" 
         (click)="setRoundCount(false)"
         [ngClass]="{'not-active': settingsService.roundLength < 2}">
         -
       </ion-button>
-        <div class="settings__round-count">
+        <div class="settings__set-count">
         {{settingsService.roundLength}}
         </div>
       <ion-button 
-        class="settings__round-btn"
+        class="settings__set-btn"
+        (click)="setRoundCount(true)">
+        +
+      </ion-button>
+    </div>
+
+    <div class="settings__subheader">Time on answer</div>
+    <div class="settings__set-container">
+      <ion-button
+        class="settings__set-btn" 
+        (click)="setRoundCount(false)"
+        [ngClass]="{'not-active': settingsService.secondsOnAnswer < 6}">
+        -
+      </ion-button>
+        <div class="settings__set-count">
+        {{settingsService.secondsOnAnswer}} sec
+        </div>
+      <ion-button 
+        class="settings__set-btn"
         (click)="setRoundCount(true)">
         +
       </ion-button>
