--- a/src/app/components/game/game.page.scss
+++ b/src/app/components/game/game.page.scss
@@ -37,6 +37,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 2;
     }
 
     .game-over {
@@ -75,6 +76,14 @@
         align-items: center;
         justify-content: center;
         font-size: 3rem;
+    }
+
+    &__answer-reaction {
+        height: 35vh;
+        width: 100%;
+        position: absolute;
+        background: red;
+        opacity: 0;
     }
 
     &__keyboard {
