--- a/src/app/components/menu/menu.page.html
+++ b/src/app/components/menu/menu.page.html
@@ -6,11 +6,11 @@
 
       <div class="menu__buttons">
         <div routerLink="/game" 
-             class="menu__button">
+             class="basic-button">
           play
         </div>
         <div routerLink="/settings"
-             class="menu__button">
+             class="basic-button">
           settings
         </div>
       </div>
