--- a/src/app/components/settings/settings.page.scss
+++ b/src/app/components/settings/settings.page.scss
@@ -4,13 +4,20 @@
     height: 100vh;
 
     &__header {
-        font-size: 25px;
+        font-size: 2rem;
         text-align: center;
         padding: 20px;
     }
 
+    &__btn-and-warning {
+        min-height: 5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
     &__warning {
-        font-size: 16px;
+        font-size: 1.5rem;
         text-align: center;
         color: #ff0000;
     }
