--- a/src/global.scss
+++ b/src/global.scss
@@ -26,8 +26,26 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 
-* {
+*,
+*::before,
+*::after {
+    padding: 0;
+    margin: 0;
     font-family: 'Staatliches', cursive;
+    box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+}
+
+p {
+    margin: 0;
 }
 
 .not-active {
