Fixed init GamePage component, 'go-home' btn link

--- a/src/app/components/game/game.page.html
+++ b/src/app/components/game/game.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true">
   <div class="game-container">
-    <div routerLink="/menu" 
+    <div routerLink="/settings" 
          class="go-home">
       <
     </div>
