Fixed set-btn styles

--- a/src/app/components/settings/settings.page.html
+++ b/src/app/components/settings/settings.page.html
@@ -32,38 +32,38 @@
 
     <div class="settings__subheader">Round count</div>
     <div class="settings__set-container">
-      <ion-button
-        class="settings__set-btn" 
+      <div
+        class="basic-button set-btn" 
         (click)="setCounts(false, 'roundLength')"
         [ngClass]="{'not-active': settingsService.roundLength < 2}">
         -
-      </ion-button>
+      </div>
         <div class="settings__set-count">
         {{settingsService.roundLength}}
         </div>
-      <ion-button 
-        class="settings__set-btn"
+      <div 
+        class="basic-button set-btn"
         (click)="setCounts(true, 'roundLength')">
         +
-      </ion-button>
+      </div>
     </div>
 
     <div class="settings__subheader">Time on answer</div>
     <div class="settings__set-container">
-      <ion-button
-        class="settings__set-btn" 
+      <div
+        class="basic-button set-btn" 
         (click)="setCounts(false, 'secondsOnAnswer')"
         [ngClass]="{'not-active': settingsService.secondsOnAnswer < 6}">
         -
-      </ion-button>
+      </div>
         <div class="settings__set-count">
         {{settingsService.secondsOnAnswer}} sec
         </div>
-      <ion-button 
-        class="settings__set-btn"
+      <div 
+        class="basic-button set-btn"
         (click)="setCounts(true, 'secondsOnAnswer')">
         +
-      </ion-button>
+      </div>
     </div>
 
   </div>
